# sept-2023-drf

./: .env  .gitignore  docker-compose.yml  pyproject.toml  setup.cfg
apps/auto_parks/: models.py  serializer.py  views.py
apps/auto_parks/migrations/: 0001_initial.py  0002_rename_autoparksmodel_autoparkmodel.py  0003_autoparkmodel_user.py
apps/cars/: choices.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0003_carmodel_created_at_carmodel_updated_at.py  0004_carmodel_auto_parks.py  0005_rename_auto_parks_carmodel_auto_park.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
cars/: serializers.py  views.py
cars/migrations/: 0001_initial.py  0002_alter_carmodel_table.py
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: pagination.py
